# typecode

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  README.rst  azure-pipelines.yml  configure  configure.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  typecode.ABOUT
.github/workflows/: test-ci-linux-arm.yml  test-ci-mac.yml
etc/ci/: azure-win.yml
src/typecode/: __init__.py  contenttype.py  entropy.py  extractible.py  magic2.py  mimetypes.py  prog_lexers.py  prog_lexers.py.ABOUT  pygments_lexers.py  pygments_lexers.py.ABOUT  pygments_lexers_mapping.py  pygments_lexers_mapping.py.ABOUT
src/typecode/_vendor/pygments/: __init__.py  cmdline.py  formatter.py  lexer.py  sphinxext.py  style.py  util.py
src/typecode/_vendor/pygments/filters/: __init__.py
src/typecode/_vendor/pygments/formatters/: __init__.py  _mapping.py  bbcode.py  groff.py  html.py  img.py  irc.py  latex.py  other.py  pangomarkup.py  rtf.py  svg.py  terminal.py  terminal256.py
src/typecode/_vendor/pygments/lexers/: __init__.py  _mysql_builtins.py  _postgres_builtins.py  _scilab_builtins.py  _sourcemod_builtins.py  actionscript.py  ada.py  agile.py  algebra.py  ambient.py  amdgpu.py  ampl.py  apdlexer.py  apl.py  archetype.py  arrow.py  arturo.py  asc.py  asm.py  asn1.py  automation.py  bare.py  basic.py  bdd.py  berry.py  bibtex.py  blueprint.py  boa.py  bqn.py  business.py  c_cpp.py  c_like.py  capnproto.py  carbon.py  cddl.py  chapel.py  clean.py  codeql.py  comal.py  compiled.py  (+194 more)
src/typecode/_vendor/pygments/styles/: __init__.py  abap.py  algol.py  algol_nu.py  arduino.py  autumn.py  borland.py  bw.py  coffee.py  colorful.py  default.py  dracula.py  emacs.py  friendly.py  friendly_grayscale.py  fruity.py  gh_dark.py  gruvbox.py  igor.py  inkpot.py  lightbulb.py  lilypond.py  lovelace.py  manni.py  material.py  monokai.py  murphy.py  native.py  nord.py  onedark.py  paraiso_dark.py  paraiso_light.py  pastie.py  perldoc.py  rainbow_dash.py  rrt.py  sas.py  solarized.py  staroffice.py  stata_dark.py  (+7 more)
tests/: filetype_test_utils.py  test_contenttype.py  test_entropy.py  test_extractible.py  test_magic2.py  test_types.py
tests/data/filetest/: test.sh.yml
tests/data/filetest/archive/: a.tar.gz.yml  e.tar.bz2.yml  e.tar.gz.yml  file_4.26-1.diff.gz.yml  posixnotgnu.tar.yml  test.tar.lzma.yml  test.tar.xz.yml  test.zip.yml  win-archive.lib.yml
tests/data/filetest/binary/: jruby_time_zone_TimeOfDay.dat.yml  pixelstream.rgb.yml  windows.dll.yml  windows.dll.yml-linux-system-provided~  windows.dll.yml-mac-system-provided~
tests/data/filetest/certificate/: ECLIPSE.RSA.yml  ECLIPSE.RSA.yml-mac-system-provided~
tests/data/filetest/code/assembly/: bcopy.s.yml
tests/data/filetest/code/c/: CcccDevStudioAddIn.rc2.yml  SIMPLE.C.yml  TEST.H.yml  TEST_LOWERCASE.h.yml  cpu.c.yml  main.c.yml  mm.c.yml  netdb.h.yml  pci.c.yml  pci_v3.c.yml  resource.h.yml
tests/data/filetest/code/cpp/: StdAfx.cpp.yml  non_ascii.cpp.yml  stacktrace.cpp.yml  string.CPP.yml
tests/data/filetest/code/groff/: example.ms.yml
tests/data/filetest/code/java/: Appender.java.yml  ChartTiming1.java.yml  ChartTiming1.java.yml-mac-system-provided~  CommonViewerSiteFactory.jad.yml  Logger.JAVA.yml  contenttype.java.yml
tests/data/filetest/code/js/: a.js.yml
tests/data/filetest/code/python/: __init__.py.yml  contenttype.py.yml
tests/data/filetest/code/scala/: Applicative.scala.yml
tests/data/filetest/compiled/flash/: a.swf.yml  b.swf.yml
tests/data/filetest/compiled/linux/: i686-shash.yml  x86_64-shash.yml
tests/data/filetest/compiled/win/: file.exe.yml  file.exe.yml-linux-system-provided~  file.exe.yml-mac-system-provided~  zlib1.dll.yml  zlib1.dll.yml-linux-system-provided~  zlib1.dll.yml-mac-system-provided~
tests/data/filetest/config/: config.conf.yml  defconfig-ar531x-jffs2.yml  eclipse_configuration_3u.cfs.yml
tests/data/filetest/data/: mysql-arch.ARZ.yml  mysql-arch.yml  nulls.txt.yml
tests/data/filetest/doc/html/: Label.html.yml  a.htm.yml  allclasses-frame.html.yml  contenttype.html.yml
tests/data/filetest/doc/office/: excel.xls.yml  excel.xlsx.yml  power.ppt.yml  power.pptx.yml
tests/data/filetest/doc/pdf/: a.pdf.yml  notpdf.pdf.yml  notpdf.pdf.yml-linux-system-provided~  pdf.pdf.yml
tests/data/filetest/doc/postscript/: a.ps.yml  doc.ps.yml
tests/data/filetest/doc/xml/: some.xml.yml  somespring.xml.yml
tests/data/filetest/media/: Image-ascii.pgm.yml  Image-ascii.pgm.yml-mac-system-provided~  Image.pgm.yml  Image1.bmp.yml  Image1.dib.yml  Image1.gif.yml  Image1.ico.yml  Image1.iff.yml  Image1.jif.yml  Image1.jpeg.yml  Image1.pbm.yml  Image1.pcx.yml  Image1.pcx.yml-mac-system-provided~  Image1.ppm.yml  Image1.psd.yml  Image1.ras.yml  Image1.tga.yml  Image1.tga.yml-mac-system-provided~  Image1.tif.yml  Movie.wmv.yml  Movie_0001.wmv.yml  Movie_0002.wmv.yml  TBarLrge.bmp.yml  TBarMedm.bmp.yml  a.aif.yml  a.aiff.yml  a.au.yml  a.avi.yml  a.flac.yml  a.mp2.yml  a.mp3.yml  a.ogg.yml  a.png.yml  a.theo.ogg.yml  a.wav.yml  a4.mp4.yml  a4.mpg.yml  mov.wvm.wmv.yml
tests/data/filetest/package/: TicketImport-0.7a-py2.5.egg.yml  ant-jsch-1.7.0.jar.yml  c.war.yml  rubygems-update-1.4.1.gem.yml
tests/data/filetest/script/: build_w32vc.bat.yml  install.yml  makelinks.yml  zip_src.bat.yml
tests/data/filetest/text/: COPYING.yml  CREDITS.yml  ChangeLog.yml  windowserver.log.yml  x11-xconsortium_text.txt.yml
tests/typecode/: filetype_test_utils.py  test_contenttype.py  test_entropy.py  test_extractible.py  test_types.py
tests/typecode/data/filetest/: test.sh.yml
tests/typecode/data/filetest/archive/: a.tar.gz.yml  e.tar.bz2.yml  e.tar.gz.yml  e.tar.yml  file_4.26-1.diff.gz.yml  posixnotgnu.tar.yml  test.tar.lzma.yml  test.tar.xz.yml  test.zip.yml  win-archive.lib.yml
tests/typecode/data/filetest/binary-random/: binary_random_1.yml  binary_random_4.yml
(+123 files in other folders)
