[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml] >= 4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
norecursedirs = [
   ".git",
   "bin",
   "dist",
   "build",
   "_build",
   "dist",
   "etc",
   "local",
   "ci",
   "docs",
   "man",
   "share",
   "samples",
   ".cache",
   ".settings",
   "Include",
   "include",
   "Lib",
   "lib",
   "lib64",
   "Lib64",
   "Scripts",
   "thirdparty",
   "tmp",
   "tests/typecode/data",
   ".eggs"
]

[tool.vendy]
target = 'typecode'
packages = [
    "pygments==2.4.2",
]

python_files = "*.py"

python_classes="Test"
python_functions="test"

addopts = [
    "-rfExXw",
    "--strict",
    "--doctest-modules"
]