[metadata]
name = typecode
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Comprehensive filetype and mimetype detection using libmagic and Pygments.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/typecode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    filetype
    mimetype
    libmagic
    scancode-toolkit
    typecode
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.6.*

install_requires =
    attrs >= 18.1, !=20.1.0
    binaryornot
    commoncode >= 21.5.25
    pdfminer.six
    plugincode


[options.packages.find]
where = src


[options.extras_require]
full =
    typecode_libmagic >= 5.39.210223

testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black
    saneyaml
    vendy

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
