[metadata]
name = typecode
version = 30.0.1
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Comprehensive filetype and mimetype detection using libmagic and Pygments.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/typecode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities

keywords =
    open source
    filetype
    mimetype
    libmagic
    scancode-toolkit
    typecode
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =
    attrs >= 18.1, !=20.1.0
    binaryornot
    commoncode >= 30.2.0
    pdfminer.six >= 20200101
    plugincode >= 30.0.0


[options.packages.find]
where = src


[options.extras_require]
full =
    typecode_libmagic >= 5.39.210223

testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 8.0.0
    pycodestyle >= 2.8.0
    twine
    black
    twine
    saneyaml
    vendy
    isort

docs =
    Sphinx == 6.2.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
