[metadata]
name = typecode
version = 30.1.0
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Comprehensive filetype and mimetype detection using libmagic and Pygments.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/typecode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities

keywords =
    open source
    filetype
    mimetype
    libmagic
    scancode-toolkit
    typecode
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst
    README.rst

[options]
python_requires = >=3.10

package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

install_requires =
    attrs >= 18.1, !=20.1.0
    binaryornot
    commoncode >= 30.2.0
    pdfminer.six >= 20200101
    plugincode >= 30.0.0


[options.packages.find]
where = src


[options.extras_require]
full =
    typecode_libmagic >= 5.39.210223

dev =
    pytest >= 7.0.1
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    ruff
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton
    vendy
    saneyaml
